# appliedcryptography

./: .gitattributes  .gitignore  CONTRIBUTORS.md  Makefile  NOTES.md  README.md  calendar.ics
.zed/: tasks.json
assignments/: README.md
lab/: lab-contact-discovery.tex  lab-password-manager.tex  lab-pq-migration.tex  lab-private-auth.tex  lab-proverif-model.tex  lab-secure-messenger.tex  lab-time-lock.tex  lab-zk-battleship.tex  password-manager.tex  pq-migration.tex  secure-messenger.tex  zk-battleship.tex
labs/: pq-migration.tex  zk-battleship.tex
materials/: README.md
objects/: README.md
problem-set/: problem-set-1.tex  problem-set-2.tex  problem-set-3.tex  problem-set-4.tex  problem-set-5.tex  problem-set-6.tex  problem-set-7.tex  problem-set-8.tex
problem-sets/: problem-set-1.tex  problem-set-2.tex  problem-set-4.tex  problem-set-7.tex  problem-set-8.tex
project/: project-contact-discovery.tex  project-password-manager.tex  project-pq-auth.tex  project-pq-migration.tex  (+5 more)
starter-kit/: Cargo.toml  README.md
starter-kit/examples/: basic_crypto.rs
starter-kit/go/: README.md  go.mod
starter-kit/go/internal/dh/: dh.go  dh_test.go  example_test.go
starter-kit/go/internal/encrypt/: encrypt.go  encrypt_test.go  example_test.go
starter-kit/go/internal/hash/: example_test.go  hash.go  hash_test.go
starter-kit/go/internal/sign/: example_test.go  sign.go  sign_test.go
starter-kit/rust/: README.md
starter-kit/src/: error.rs  hashing.rs  kdf.rs  key_exchange.rs  lib.rs  mac.rs  one_time_pad.rs  pseudorandom.rs  signatures.rs  symmetric.rs  utils.rs
(+295 files in other folders)
