[package]
repository = "https://cedarcrypt.org/nadim/appliedcryptography"
name = "applied-crypto-starter-kit"
version = "0.1.0"
edition = "2024"
authors = ["Nadim Kobeissi"]
description = "A starter kit for experimenting with cryptographic primitives covered in Part 1 of the Applied Cryptography course: https://appliedcryptography.page"
license = "MIT"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.99"
argon2 = "0.5.3"
base64 = "0.22.1"
blake3 = "1.8.2"
cipher = "0.4.4"
ctr = "0.9.2"
ecb = "0.1.2"
ed25519-compact = "2.1.1"
getrandom = "0.3.3"
hex = "0.4.3"
hkdf = "0.12.4"
hmac = "0.12.1"
md-5 = "0.10.6"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
p256 = "0.13.2"
pbkdf2 = "0.12.2"
poly1305 = "0.8.0"
rand = "0.8.5"
scrypt = "0.11.0"
sha2 = "0.10.9"
sha3 = "0.10.8"
subtle = "2.6.1"
thiserror = "2.0.14"
zeroize = "1.8.1"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.7.0"


[profile.release]
overflow-checks = true
codegen-units = 1
strip = false
lto = "fat"
opt-level = 3

[features]
default = ["std"]
std = []
# Feature to enable educational/insecure algorithms for demonstration
educational = []
